--- a/index.html
+++ b/index.html
@@ -21,6 +21,40 @@
   </head>
   <body>
     <!-- START HERE-->
+
+    <div class="container">
+      <header id="main-header">
+        <div class="row no-gutters">
+          <div class="col-lg-4 col-md-5">
+            <img src="img/person1.jpg" alt="Photo of person">
+          </div>
+          <div class="col-lg-8 col-md-7">
+            <div class="d-flex flex-column">
+              <div class="p-5 bg-dark text-white">
+                <div class="d-flex flex-row justify-content-between align-items-center">
+                  <h1 class="display-4">John Doe</h1>
+                  <div class="d-none d-md-block">
+                    <a href="http://twitter.com" class="text-white">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div>
+                    <a href="http://facebook.com" class="text-white">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div>
+                    <a href="http://instagram.com" class="text-white">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                  <div>
+                    <a href="http://github.com" class="text-white">
+                      <i class="fab fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
     <script
       src="http://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
