--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Portfolio Bootstrap Theme</title>
   </head>
@@ -220,6 +224,125 @@
         </div>
       </div>
 
+      <!-- WORK -->
+      <div id="work" class="collapse">
+        <div class="card card-body bg-warning text-white py-5">
+          <h2>My Work</h2>
+          <p class="lead">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, ut!
+          </p>
+        </div>
+
+        <div class="card card-body py-5">
+          <h3>What Have I Built?</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            nostrum repudiandae debitis, nam iste amet.
+          </p>
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=252"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600.jpg?image=252"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=253"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600.jpg?image=253"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=254"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600.jpg?image=254"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=255"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600.jpg?image=255"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=256"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600.jpg?image=256"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=257"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600.jpg?image=257"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=258"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600.jpg?image=258"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a
+                href="https://unsplash.it/1200/768.jpg?image=259"
+                data-toggle="lightbox"
+              >
+                <img
+                  src="https://unsplash.it/600.jpg?image=259"
+                  alt=""
+                  class="img-fluid"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- FOOTER -->
       <footer id="main-footer" class="p-5 bg-dark text-white">
         <div class="row">
@@ -247,9 +370,18 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+
     <script>
+      // Collapse functionality
       $(".port-item").click(function() {
         $(".collapse").collapse("hide");
+      });
+
+      // Ekko-Lightbox functionality
+      $(document).on("click", '[data-toggle="lightbox"]', function(e) {
+        e.preventDefault();
+        $(this).ekkoLightbox();
       });
     </script>
   </body>
